# echoinput

./: Cargo.toml  LICENSE  PKGBUILD
.github/workflows/: ci.yml  release.yml
.kimchi/docs/: new-architecture.md
Formula/: echoinput.rb
app/: Cargo.toml
app/src/: main.rs
assets/: site.webmanifest
echoinput/: Cargo.toml  build.rs
echoinput/resources/: echoinput.rc  manifest.xml
echoinput/src/: main.rs
echoinput/wix/: main.toml  main.wxs
input-core/: Cargo.toml  build.rs
input-core/src/: config.rs  events.rs  ipc.rs  key_resolver.rs  keys.rs  lib.rs  overlay.rs  presets.rs  processor.rs  traits.rs
overlay/: Cargo.toml
overlay-macos/: Cargo.toml
overlay-macos/src/: lib.rs
overlay-wayland/: Cargo.toml
overlay-wayland/src/: animation.rs  lib.rs  renderer.rs
overlay-windows/: Cargo.toml
overlay-windows/src/: lib.rs
overlay-x11/: Cargo.toml
overlay-x11/src/: lib.rs
overlay/src/: animation.rs  lib.rs
packaging/winget/: echoinput.yaml
platform/: Cargo.toml
platform-linux/: Cargo.toml
platform-linux/examples/: capture_test.rs
platform-linux/src/: evdev_capture.rs  keymap.rs  lib.rs
platform-linux/src/overlay_wayland/: animation.rs  mod.rs  renderer.rs
platform-linux/src/overlay_x11/: mod.rs
platform-macos/: Cargo.toml
platform-macos/src/: keymap.rs  lib.rs
platform-macos/src/overlay/: mod.rs
platform-windows/: Cargo.toml
platform-windows/src/: keymap.rs  lib.rs
platform-windows/src/overlay/: mod.rs
platform/src/: capture.rs  factory.rs  lib.rs  overlay.rs  processor.rs
settings/: Cargo.toml
settings/src/: app.rs  lib.rs  theme.rs
settings/src/tabs/: about.rs  display.rs  general.rs  keycap.rs  mod.rs  position.rs
tauri-app/src/: main.rs
wayland-app/: Cargo.toml
wayland-app/src/: main.rs
wix/: main.wxs
