[workspace]
members = [
    "input-core",
    "platform",
    "platform-linux",
    "platform-windows",
    "platform-macos",
    "overlay",
    "overlay-wayland",
    "overlay-x11",
    "overlay-windows",
    "overlay-macos",
    "settings",
    "echoinput",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/echoinput/echoinput"
description = "A privacy-first keyboard visualization overlay for Wayland, X11, Windows, and macOS"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam-channel = "0.5"
toml = "0.8"
dirs = "5"

# Wayland dependencies
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
cairo-rs = { version = "0.20", default-features = false }

# GUI
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
