[package]
name = "echoinput"
description = "EchoInput — keyboard visualization overlay"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "echoinput"
path = "src/main.rs"

[dependencies]
input-core = { path = "../input-core" }
overlay = { path = "../overlay" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
eframe = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
platform-linux = { path = "../platform-linux" }
overlay-wayland = { path = "../overlay-wayland" }
overlay-x11 = { path = "../overlay-x11" }

[target.'cfg(target_os = "windows")'.dependencies]
platform-windows = { path = "../platform-windows" }
overlay-windows = { path = "../overlay-windows" }

[target.'cfg(target_os = "macos")'.dependencies]
platform-macos = { path = "../platform-macos" }
overlay-macos = { path = "../overlay-macos" }
