[package]
name = "echoinput"
description = "EchoInput — keyboard visualization overlay"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "echoinput"
path = "src/main.rs"

[dependencies]
input-core = { path = "../input-core" }
overlay = { path = "../overlay" }
platform = { path = "../platform" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
eframe = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
platform-linux = { path = "../platform-linux" }

[target.'cfg(target_os = "windows")'.dependencies]
platform-windows = { path = "../platform-windows" }

[target.'cfg(target_os = "macos")'.dependencies]
platform-macos = { path = "../platform-macos" }

[build-dependencies]
winresource = "0.1"