[package]
name = "input-core"
description = "Core types, traits, and event definitions for EchoInput"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
toml = { workspace = true }
dirs = { workspace = true }
