[package]
name = "overlay-wayland"
description = "Wayland layer-shell overlay renderer for EchoInput"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
input-core = { path = "../input-core" }
platform = { path = "../platform" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
wayland-client = { workspace = true }
wayland-protocols = { workspace = true }
wayland-protocols-wlr = { workspace = true }
cairo-rs = { workspace = true }
libc = "0.2"
xkbcommon = { version = "0.8", features = ["wayland"] }