[package]
name = "overlay-x11"
description = "X11 overlay renderer for EchoInput"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
input-core = { path = "../input-core" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
cairo-rs = { version = "0.20", default-features = false }
libc = "0.2"
