[package]
name = "platform-linux"
description = "Linux platform implementations for EchoInput (evdev, Wayland, X11)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
input-core = { path = "../input-core" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
libc = "0.2"

# evdev for keyboard/mouse capture
evdev = { version = "0.13", features = ["tokio"] }

# XKB for keymap translation
xkbcommon = { version = "0.8", features = ["wayland"] }

# Async I/O
mio = { version = "1", features = ["os-ext"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }
