[package]
name = "platform-linux"
description = "Linux platform implementations for EchoInput (evdev, Wayland, X11)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
input-core = { path = "../input-core" }
platform = { path = "../platform" }
overlay = { path = "../overlay" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
cairo-rs = { version = "0.20", default-features = false }

# evdev for keyboard/mouse capture
evdev = { version = "0.13", features = ["tokio"] }

# XKB for keymap translation
xkbcommon = { version = "0.8", features = ["wayland"] }

# Wayland dependencies
wayland-client = { version = "0.31", default-features = false, features = ["libwayland_1_23"] }
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

# X11 dependencies
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }

# Async I/O
mio = { version = "1", features = ["os-ext"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }
