[package]
name = "platform-macos"
description = "macOS platform implementations for EchoInput"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
input-core = { path = "../input-core" }
platform = { path = "../platform" }
overlay-macos = { path = "../overlay-macos" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
crossbeam-channel = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
objc = "0.2"