[package]
name = "platform-macos"
description = "macOS platform implementations for EchoInput"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
input-core = { path = "../input-core" }
platform = { path = "../platform" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
crossbeam-channel = "0.5"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
cairo-rs = { version = "0.20", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
objc = "0.2"