[package]
name = "platform"
description = "Platform abstraction layer for EchoInput"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
input-core = { path = "../input-core" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
crossbeam-channel = "0.5"
serde = { workspace = true }