[package]
name = "settings"
description = "Settings GUI for EchoInput"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
input-core = { path = "../input-core" }
platform = { path = "../platform" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
eframe = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }