[package]
name = "wayland-app"
description = "EchoInput Wayland overlay application"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "echoinput-wayland"
path = "src/main.rs"

[dependencies]
input-core = { path = "../input-core" }
platform-linux = { path = "../platform-linux" }
overlay-wayland = { path = "../overlay-wayland" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
