[package]
name = "wayland-app"
description = "EchoInput Wayland overlay application"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "echoinput"
path = "src/main.rs"

[dependencies]
input-core = { path = "../input-core" }
overlay-wayland = { path = "../overlay-wayland" }
platform-linux = { path = "../platform-linux" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
eframe = { workspace = true }
